2007-09-19  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (close-connection): Use *log-output* instead of
	*debug-io* (which could be redirected to the to-be-closed
	connection).

2007-09-15  Helmut Eller  <heller@common-lisp.net>

	Let slime-setup load contribs.

	* slime.el (slime-setup): Take a list of contribs to load as
	argument.

	* slime-autoloads.el (slime-setup): Ditto, but delay the actual
	loading until slime is loaded.
	(slime-setup-contribs): New function.

2007-09-15  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-maybe-warn-for-different-source-root): Catch
	returned NIL from `slime-file-name-merge-source-root' if the two
	filenames don't share a common source root. 
	Reported by Frank Goenninger.
	
2007-09-15  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-split-string): New semi-portability function.
	The behaviour of `split-string' changed between Emacs21 and
	Emacs22. Thanks to Christophe Rhodes for reporting this.
	(slime-file-name-merge-source-root): Use `slime-split-string'.
	(slime-highlight-differences-in-dirname): Likewise.

2007-09-14  Helmut Eller  <heller@common-lisp.net>

	Some cleanups for the REPL.

	* slime.el (slime-repl-write-string): Split it up into smaller
	functions.
	(slime-repl-emit, slime-repl-emit-result)
	(slime-emit-string): New functions.

	(slime-repl-save-history): Use prin1 instead of pp.

	(repl-type-ahead): New test case.

2007-09-12  Christophe Rhodes  <csr21@cantab.net>

	Make ASDF:LOAD-OP (and SBCL REQUIRE) happy with swank.asd

	* swank.asd: Define and use a CL-SCRIPT-FILE class for loading as
	source, even with ASDF:LOAD-OP.

2007-09-11  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank-loader.lisp: Aways compile-file `contrib/swank-asdf.lisp'
	on SBCL. This fixes "Undefined function" style-warnings when using
	`slime-asdf' in combination with SBCL. Reported by Cyrus Harmon.

	* swank-sbcl.lisp: Explicitly require ASDF. (While this is not